src/test/deca/syntax/invalid/created/include/not_find/main.deca
// Description
//      Include un fichier qui n'existe pas 
// Resultat
//      Erreur syntaxe Ligne 6 : include file not found

#include "bob.decah"